# PolicyFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  policyflow.runners.yml  pyproject.toml
.github/workflows/: policyflow-governance.yml
agents/: architecture-agent.md  planning-agent.md  qa-agent.md
docs/: audit-reporting.md  concepts.md  evaluation-governance.md  extraction-notes.md  getting-started.md  governance-enforcement-roadmap.md  loop-governance.md  overview.md  public-api.md  release-and-upgrade.md  roadmap-agentic-governance.md  schema-compatibility.md
docs/adr/: 0001-strategic-direction-agentic-governance.md  0002-policyflow-is-not-an-agent-runtime.md  0003-loop-and-evaluation-governance.md
docs/planning/: agentic-governance-milestones.md
examples/: policyflow.github-governed.yml
examples/reference-consumer/: README.md  policyflow.runners.yml  policyflow.yml
github/: PULL_REQUEST_TEMPLATE.md
github/ISSUE_TEMPLATE/: architecture-change.yml  bugfix.yml
github/workflows/: policyflow-governance.yml
policyflow/: __init__.py  agent_execution.py  api.py  bootstrap.py  cli.py  codex_runner.py  consumer_config.py  doctor.py  exceptions.py  github_approval.py  models.py  reporting.py  runtime.py  schemas.py  sync.py  validator.py  workflow_generator.py
prompts/: architecture-agent.prompt.md  codex-feature-prompt.template.md  codex-review-prompt.template.md  planning-agent.prompt.md  qa-agent.prompt.md  review-agent.prompt.md  senior-dev-agent.prompt.md
rules/: agent-handoff-contracts.md  confidence-governance.md  escalation-rules.md  risk-classification.md  risk-review-matrix.md
tests/: test_asset_sync.py  test_bootstrap.py  test_codex_runner.py  test_consumer_config.py  test_consumer_github_workflow.py  test_doctor.py  test_github_approval.py  test_golden_consumer_smoke.py  test_pr_validator.py  test_public_api.py  test_release_packaging.py  test_repository_docs.py  test_runtime_cli.py  test_validator.py  test_workflow_generator.py
tests/fixtures/: completed-approval-without-evidence.yml  completed-implementation-without-contract.yml  completed-planning-without-contract.yml  completed-planning-without-evidence.yml  empty-required-reviews.yml  evaluation-empty-categories.yml  evaluation-metrics-compliant.yml  evaluation-metrics-non-compliant.yml  evaluation-missing-evidence-refs.yml  evaluation-threshold-mismatch.yml  expired-override.yml  expiring-override.yml  github-reviews-missing-human-approval.json  github-reviews-missing-override-approver.json  github-reviews-valid-high.json  handoff-with-expired-override.yml  handoff-without-produced-outputs.yml  high-empty-approval-evidence.yml  high-empty-approved-by.yml  high-missing-approval-evidence.yml  high-missing-approval-phase.yml  high-missing-evidence-approval.yml  high-null-approved-by.yml  high-protected-area-without-escalation.yml  (+63 more)
(+129 files in other folders)
