[project]
name = "policyflow"
version = "0.1.1"
description = "Lightweight governance validator for PolicyFlow workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Marcel Dankert" },
]
keywords = [
  "agentic-development",
  "ai-governance",
  "workflow",
  "policy-as-code",
  "github-actions",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/MarcelDankert/PolicyFlow"
Documentation = "https://github.com/MarcelDankert/PolicyFlow#readme"
Issues = "https://github.com/MarcelDankert/PolicyFlow/issues"
Changelog = "https://github.com/MarcelDankert/PolicyFlow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=8.0",
]

[project.scripts]
policyflow = "policyflow.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["policyflow"]

[tool.setuptools.package-data]
policyflow = [
  "assets/agents/*.md",
  "assets/prompts/*.md",
  "assets/rules/*.md",
  "assets/workflows/templates/*.yml",
  "assets/github/*.md",
  "assets/github/ISSUE_TEMPLATE/*.yml",
  "assets/github/workflows/*.yml",
  "assets/examples/*.yml",
  "assets/docs/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
